force-app/main/default/objects/Incident_Service_Request__c/Incident_Service_Request__c.object-meta.xml
<CustomObject>
    <label>Incident/Service Request</label>
    <nameField>
        <displayFormat>IM-{0}</displayFormat>
        <label>Incident Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Incidents/Service Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>