force-app/main/default/objects/Incident_Service_Request__c/fields/Capability__c.field-meta.xml
<CustomField>
    <fullName>Capability__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Capability</label>
    <referenceTo>Capability__c</referenceTo>
    <relationshipLabel>Incidents/Service Requests</relationshipLabel>
    <relationshipName>Incidents_Service_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>