force-app/main/default/objects/Incident_Service_Request__c/fields/Release__c.field-meta.xml
<CustomField>
    <fullName>Release__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Release</label>
    <referenceTo>Release__c</referenceTo>
    <relationshipLabel>Incidents/Service Requests</relationshipLabel>
    <relationshipName>Incidents_Service_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>