force-app/main/default/objects/Incident_Service_Request__c/fields/Request__c.field-meta.xml
<CustomField>
    <fullName>Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Request</label>
    <referenceTo>Request__c</referenceTo>
    <relationshipLabel>Incidents/Service Requests</relationshipLabel>
    <relationshipName>Incidents_Service_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>