force-app/main/default/objects/Incident_Service_Request__c/recordTypes/Incident.recordType-meta.xml
<RecordType>
    <fullName>Incident</fullName>
    <active>true</active>
    <description>Any unplanned interruption or reduction in the quality of a service.</description>
    <label>Incident</label>
</RecordType>