force-app/main/default/objects/Incident_Service_Request__c/recordTypes/Service_Request.recordType-meta.xml
<RecordType>
    <fullName>Service_Request</fullName>
    <active>true</active>
    <description>A request from a User for information, or advice, or for a Standard Change or for Access to an IT Service.</description>
    <label>Service Request</label>
</RecordType>